tests/fixtures/invalid/pow_none_none_dict.py
# Cannot call pow() with None, None, Dict[str, int]
x = pow(None, None, {"a": 1})
